-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 14, 15
-
Component/s: client-libs
-
b16
-
x86_64
-
windows_2012
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8247223 | 13.0.4 | Toshio Nakamura | P4 | Resolved | Fixed | b05 |
| JDK-8244295 | 11.0.9-oracle | Toshio Nakamura | P4 | Resolved | Fixed | b01 |
| JDK-8244239 | 11.0.8 | Toshio Nakamura | P4 | Resolved | Fixed | b02 |
| JDK-8268107 | openjdk8u312 | Alex Kasko | P4 | Resolved | Fixed | b01 |
| JDK-8263307 | 8u301 | Alexey Ivanov | P4 | Resolved | Fixed | b01 |
| JDK-8263510 | 7u311 | Alexey Ivanov | P4 | Resolved | Fixed | b01 |
openjdk version "11.0.6" 2020-01-14
OpenJDK Runtime Environment AdoptOpenJDK (build 11.0.6+10)
Eclipse OpenJ9 VM AdoptOpenJDK (build openj9-0.18.1, JRE 11 Windows Server 2012 R2 amd64-64-Bit Compressed References 20200122_442 (JIT enabled, AOT enabled)
OpenJ9 - 51a5857d2
OMR - 7a1b0239a
JCL - da35e0c380 based on jdk-11.0.6+10)
ADDITIONAL OS VERSION INFORMATION :
Windows Server 2012R2
A DESCRIPTION OF THE PROBLEM :
Eclipse OpenJ9 VM detected some JNI errors about ReleaseStringChars in Windows Print.
(Hotspot VM has different checks and other warnings were detected.)
STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
1. Launch SwingSet2 demo with jni checking and OpenJ9
2. Move to TableDemo
3. Click "Print" button
Then, the following errors were detected.
$ java -Xcheck:jni:nonfatal -jar SwingSet2.jar
JVMJNCK001I JNI check utility installed. Use -Xcheck:jni:help for usage
JVMJNCK056E JNI error in ReleaseStringChars: Got memory 0x000000A290E3F3E8 from object 0x00000000002F47E0, releasing from 0x00000000002F47E8
JVMJNCK077E Error detected in sun/print/Win32PrintService.getCapabilities(Ljava/lang/String;Ljava/lang/String;)I
JVMJNCK023E JNI error detected. Continuing...
JVMJNCK056E JNI error in ReleaseStringChars: Got memory 0x000000A290E403A8 from object 0x00000000002F47B8, releasing from 0x00000000002F47C0
JVMJNCK077E Error detected in sun/print/Win32PrintService.getAllResolutions(Ljava/lang/String;Ljava/lang/String;)[I
JVMJNCK023E JNI error detected. Continuing...
EXPECTED VERSUS ACTUAL BEHAVIOR :
Expected: No errro
Actual: JNI errors were detected
REPRODUCIBILITY :
This bug can be reproduced always.
- backported by
-
JDK-8244239 Incorrect JNU_ReleaseStringPlatformChars in Windows Print
-
- Resolved
-
-
JDK-8244295 Incorrect JNU_ReleaseStringPlatformChars in Windows Print
-
- Resolved
-
-
JDK-8247223 Incorrect JNU_ReleaseStringPlatformChars in Windows Print
-
- Resolved
-
-
JDK-8263307 Incorrect JNU_ReleaseStringPlatformChars in Windows Print
-
- Resolved
-
-
JDK-8263510 Incorrect JNU_ReleaseStringPlatformChars in Windows Print
-
- Resolved
-
-
JDK-8268107 Incorrect JNU_ReleaseStringPlatformChars in Windows Print
-
- Resolved
-
- relates to
-
JDK-8262829 Native crash in Win32PrintServiceLookup.getAllPrinterNames()
-
- Resolved
-