8240518: Incorrect JNU_ReleaseStringPlatformChars in Windows Print

Reviewed-by: serb, pbansal, psadhukhan