src/java.desktop/windows/native/libawt/windows/WPrinterJob.cpp
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2000, 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2000, 2020, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -661,7 +661,7 @@ Java_sun_print_Win32PrintService_getAllResolutions(JNIEnv *env,
   }
 
   JNU_ReleaseStringPlatformChars(env, printer, printerName);
-  JNU_ReleaseStringPlatformChars(env, printer, printerPort);
+  JNU_ReleaseStringPlatformChars(env, port, printerPort);
   return resolutionArray;
 }
 
@@ -804,7 +804,7 @@ Java_sun_print_Win32PrintService_getCapabilities(JNIEnv *env,
 
   RESTORE_CONTROLWORD
   JNU_ReleaseStringPlatformChars(env, printer, printerName);
-  JNU_ReleaseStringPlatformChars(env, printer, printerPort);
+  JNU_ReleaseStringPlatformChars(env, port, printerPort);
   return ret;
 }
 
